<cj>adding images and basic header layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,9 @@
 <body>
 <div id="container">
   <div id="header">
-    <!--<img class="logo" src="/images/logo.png"/>-->
-    <div class="logo">
-       <img class="logo" src="/images/logo.png"/>
+    <div>
+        &nbsp
+       <img class="logo" src="/images/shelfLogoLight.png"/>
     </div>
     <ul>
         <li><a href="">Sell a book</a></li>
