<cj>basic layout done

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,15 +8,16 @@
 <body>
 <div id="container">
   <div id="header">
-    <div>
-        &nbsp
-       <img class="logo" src="/images/shelfLogoLight.png"/>
-    </div>
+    <div id="slide_show">slide show</div>
     <ul>
         <li><a href="">Sell a book</a></li>
         <li><a href="">My Account</a></li>
         <li><a href="">How it works</a></li>
     </ul>
+    <div class="logo">
+      &nbsp;
+    </div>
+
   </div>
   <div id="content">
     <%= yield %>
