--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -1,53 +1,68 @@
 .logo {
-   float: right;
+    float: right;
+    background: url("/images/shelfLogoLight.png");
+    height: 154px;
+    width: 339px;
 }
 
 #container {
-    border: 1px solid grey;
-    position: absolute;
     background-color: white;
-    top: 0;
-    left: 15%;
-    right: 15%;
-    bottom: 0;
+    width: 80%;
+    margin: auto;
     z-index: 1;
 }
 
 #header {
-   background:url("/images/header_cross_section.png") repeat-x scroll top left transparent;
-   height: 43%;
+    background: url("/images/header_cross_section.png") repeat-x scroll top left transparent;
+    height: 43%;
+    overflow: auto;
+}
+
+#header #slide_show {
+    color: red;
+    padding: 5px 0 0 30px;
 }
 
 #content {
-    padding: 0 39px;
-    position: relative;
-    top: 53%;
+    height: 20em;
+    margin: auto;
+    overflow: auto;
 }
 
 #footer {
-    position: relative;
-    top: 80%;
+/*position: relative;*/
+/*top: 80%;*/
+    overflow: auto;
+    background-color: black;
+    color: white;
+}
+
+#footer div {
+    font-size: 14px;
+    padding: 1em 0 0;
+    text-align: center;
 }
 
 body {
     background-color: #B8BFBF;
 }
 
-#header ul{
-    list-style:none outside none;
-    position:relative;
-    top: 40%;
-    color:red;
+#header ul {
+    float: left;
+    list-style: none outside none;
+    position: relative;
+    padding: 10% 0 0 3%;
+    color: red;
 }
 
-#footer ul{
-    list-style:none outside none;
-    position:relative;
-    top:-11px;    
+#footer ul {
+    list-style: none outside none;
+    padding: 0 2em 17px 31em;
+    font-size: 13px;
 }
 
-li{
+li {
     float: left;
     padding: 0 5px 0 0;
-    color: green; 
+    color: green;
 }
