--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -1,3 +1,3 @@
-- form_for :book, @person, :url=> {:action=>"create"} do |f|
+- form_for :book, @person, :url=> {:action=> 'create'} do |f|
   = f.text_field :first_name
   = submit_tag 'search'
