<cj> scss now working

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,9 +6,9 @@
     Book Hunt
   %link{:href=>'/stylesheets/layout.css', :media=>'screen, projection' , :rel=>"stylesheet", :type=>"text/css"}  
 %body
-  .container
-    .header
-      .slide_show
+  #container
+    #header
+      #slide_show
         slide show
       %ul
         %li
@@ -25,9 +25,9 @@
             How it Works
       .logo
         &nbsp;
-    .content
+    #content
       = yield
-    .footer
+    #footer
       .legalese
         Copyright &copy; 2010. All Rights Reserved. Book hunt.
       %ul
