--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,7 @@
   %title
     Book Hunt
   %link{:href=>'/stylesheets/layout.css', :media=>'screen, projection' , :rel=>"stylesheet", :type=>"text/css"}  
-  %link{:href=>'http://fonts.googleapis.com/css?family=Font+Name', :media=>'screen, projection' , :rel=>"stylesheet", :type=>"text/css"}  
+  %link{:href=>'http://fonts.googleapis.com/css?family=Reenie+Beanie', :media=>'screen, projection' , :rel=>"stylesheet", :type=>"text/css"}  
 %body
   #container
     #header
@@ -17,8 +17,9 @@
         %a{:href=>'books/exchange'}
           .exchange.user
 
-      .logo
-        &nbsp;
+      %a{:href=>'/'}
+        .logo
+          &nbsp;
 
     #content
       = yield
