<cj> intermediate commit. working on book crud and the post a book page.

--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -9,15 +9,15 @@
 .advanced_search{:style=>'display:none;'}
   advanced search options/tagging
 .bottom_bar
-  %span.cash_for_books
+  .cash_for_books
     .header
       Cash for books
     .content  
-  %span.donate_books
+  .donate_books
     .header
       Donate books
     .content
-  %span.latest_uploads
+  .latest_uploads
     .header
       Latest updates
     .content  
