--- a/app/views/layouts/two_column.html.haml
+++ b/app/views/layouts/two_column.html.haml
@@ -26,6 +26,7 @@
 
     #content
       = yield
+    #right_side_bar  
     #footer
       .legalese
         Copyright &copy; 2010. All Rights Reserved. Book hunt.
