--- a/app/views/books/add.html.haml
+++ b/app/views/books/add.html.haml
@@ -1,12 +1,40 @@
-%h1
-  Add a Book
-- form_for :book do |f|
-  = f.label :name, 'Name'
-  = f.text_field 'name', :maxlength => 40 , :size=> 20
-  = f.label :author,"Author"
-  = f.text_field 'author', :maxlength => 40, :size => 20
-  = f.label :mrp
-  = f.text_field :mrp, :maxlength => 5, :size => 10
-  = f.label :sale_price
-  = f.text_field :sale_price, :maxlength => 5, :size => 10 
-  = f.submit 'add'
+%script{:src=>'/javascripts/bindings/post_a_book.js', :type=>"text/javascript"}
+%script{:src=>'/javascripts/lib/books.js', :type=>"text/javascript"}
+%link{:href=>'/stylesheets/post_a_book.css', :media=>'screen, projection' , :rel=>"stylesheet", :type=>"text/css"}
+
+.post_a_book
+  %h1
+    Post a Book
+
+  .search_on_isbn{:style=>'display:none;'}
+    Search books on isbn number
+    %input{:type=>"text"}
+
+  .manual
+    Enter book details manually
+    - form_for :book do |f|
+      = f.label :name, 'Title'
+      = f.text_field 'name', :maxlength => 40 , :size=> 20
+      = f.label :author,"Author"
+      = f.text_field 'author', :maxlength => 40, :size => 20
+      = f.label :mrp
+      = f.text_field :mrp, :maxlength => 5, :size => 10
+      = f.label :sale_price
+      = f.text_field :sale_price, :maxlength => 5, :size => 10
+      = f.label :tag_list
+      = f.text_field :tag_list, :maxlength => 15, :size => 15
+      %input{:type=>'button',:value=>'add', :id=>'post_book'}
+
+.posted_books
+  Posted books
+  %table
+    %thead
+      %tr
+        %th Title
+        %th Author
+        %th Mrp
+        %th Sale Price
+        %th Tags
+        %th Edit
+        %th Delete
+    %tbody
