<cj> post a book page functionality is up with edit and delete. Now need to style it.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,11 +13,11 @@
   #container
     #header
       .type_of_user_container
-        %a{:href=>'books/add'}
+        %a{:href => book_index_url}
           .seller.user
-        %a{:href=>'books/search'}
+        %a{:href => '#'}
           .buyer.user
-        %a{:href=>'books/exchange'}
+        %a{:href => '#'}
           .exchange.user
 
       %a{:href=>'/'}
