--- a/app/views/books/index.html.haml
+++ b/app/views/books/index.html.haml
@@ -1,12 +1,45 @@
-%h1
-  Welcome to book index
-- if @books.empty?
-  = label_tag "No books to list down"
-- else
-  - @books.each do |book|
-    .book
-      = label_tag "Name"
-      = label_tag book.name
-      = link_to :action => :edit
-      |
-      = link_to :action => :delete
+%script{:src=>'/javascripts/bindings/post_a_book.js', :type=>"text/javascript"}
+%script{:src=>'/javascripts/lib/books.js', :type=>"text/javascript"}
+%link{:href=>'/stylesheets/post_a_book.css', :media=>'screen, projection' , :rel=>"stylesheet", :type=>"text/css"}
+
+.post_a_book
+  %h1
+    Post a Book
+  .search_on_isbn{:style=>'display:none;'}
+    Search books on isbn number
+    %input{:type=>"text"}
+  .manual
+    Enter book details manually
+    = render :partial => 'book_form', :locals =>{ :for_action => :add, :url => {:action => 'add'}}
+
+.posted_books
+  Posted books
+  %table
+    %thead
+      %tr
+        %th Title
+        %th Author
+        %th Mrp
+        %th Sale Price
+        %th Tags
+        %th Edit
+        %th Delete
+    %tbody
+    - @books.each do |book|
+      %tr{:id=>"#{book.id}"}
+        %td
+          = book.name
+        %td
+          = book.author
+        %td
+          = book.mrp
+        %td
+          = book.sale_price
+        %td
+          = book.tag_list
+        %td.edit_link
+          %a{:href=>"#",:url_to_post => "#{book_update_url(book.id)}"}
+            edit
+        %td
+          %a{:href=>"#{book_delete_url(book.id)}"}
+            delete
