--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,7 +15,7 @@
       .type_of_user_container
         %a{:href => book_index_url}
           .seller.user
-        %a{:href => '#'}
+        %a{:href => book_search_url}
           .buyer.user
         %a{:href => '#'}
           .exchange.user
