--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,9 +5,12 @@
   %title
     Book Hunt
   %script{:src=>'/javascripts/jquery.js', :type=>"text/javascript"}
+  %script{:src=>'/javascripts/jquery-typewatch.js', :type=>"text/javascript"}
+  %script{:src=>'/javascripts/jquery.autocomplete.min.js', :type=>"text/javascript"}
   %script{:src=>'/javascripts/jquery-ui.js', :type=>"text/javascript"}
 
   %link{:href=>'/stylesheets/layout.css', :media=>'screen, projection' , :rel=>"stylesheet", :type=>"text/css"}
+  %link{:href=>'/stylesheets/jquery.autocomplete.css', :media=>'screen, projection' , :rel=>"stylesheet", :type=>"text/css"}
   %link{:href=>'http://fonts.googleapis.com/css?family=Reenie+Beanie', :media=>'screen, projection' , :rel=>"stylesheet", :type=>"text/css"}
 %body
   #container
@@ -15,7 +18,7 @@
       .type_of_user_container
         %a{:href => book_index_url}
           .seller.user
-        %a{:href => book_search_url}
+        %a{:href => '#'}
           .buyer.user
         %a{:href => '#'}
           .exchange.user
