--- a/app/views/layouts/two_column.html.haml
+++ b/app/views/layouts/two_column.html.haml
@@ -1,49 +1,53 @@
 = '<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">'
 = '<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">'
 %head
-  %meta{:http_equiv => "Content-Type", :content=>"text/html", :charset=> 'utf-8'}
-  %title
-    Book Hunt
-  %script{:src=>'/javascripts/jquery.js', :type=>"text/javascript"}
-  %script{:src=>'/javascripts/jquery-ui.js', :type=>"text/javascript"}
+%meta{:http_equiv => "Content-Type", :content=>"text/html", :charset=> 'utf-8'}
+%title
+  Book Hunt
+%script{:src=>'/javascripts/jquery.js', :type=>"text/javascript"}
+%script{:src=>'/javascripts/jquery-typewatch.js', :type=>"text/javascript"}
+%script{:src=>'/javascripts/jquery.autocomplete.min.js', :type=>"text/javascript"}
+%script{:src=>'/javascripts/jquery-ui.js', :type=>"text/javascript"}
 
-  %link{:href=>'/stylesheets/layout.css', :media=>'screen, projection' , :rel=>"stylesheet", :type=>"text/css"}
-  %link{:href=>'http://fonts.googleapis.com/css?family=Reenie+Beanie', :media=>'screen, projection' , :rel=>"stylesheet", :type=>"text/css"}
+%link{:href=>'/stylesheets/layout.css', :media=>'screen, projection' , :rel=>"stylesheet", :type=>"text/css"}
+%link{:href=>'/stylesheets/jquery.autocomplete.css', :media=>'screen, projection' , :rel=>"stylesheet", :type=>"text/css"}
+%link{:href=>'http://fonts.googleapis.com/css?family=Reenie+Beanie', :media=>'screen, projection' , :rel=>"stylesheet", :type=>"text/css"}
 %body
-  #container
-    #header
-      .type_of_user_container
-        %a{:href=>'books/add'}
-          .seller.user
-        %a{:href=>'books/search'}
-          .buyer.user
-        %a{:href=>'books/exchange'}
-          .exchange.user
+#container
+  #header
+    .type_of_user_container
+      %a{:href => book_index_url}
+        .seller.user
+      %a{:href => '#'}
+        .buyer.user
+      %a{:href => '#'}
+        .exchange.user
 
-      %a{:href=>'/'}
-        .logo
-          &nbsp;
+    %a{:href=>'/'}
+      .logo
+        &nbsp;
 
-    #content
-      = yield
-    #right_side_bar  
-    #footer
-      .legalese
-        Copyright &copy; 2010. All Rights Reserved. Book hunt.
-      %ul
-        %li
-          %a{:href=>"#"}
-            Privacy Policy
-        %li
-          %a{:href=>"#"}
-            About Us
-        %li
-          %a{:href=>"#"}
-            Contact Us
-        %li
-          %a{:href=>"#"}
-            FAQ
-        %li
-          %a{:href=>"#"}
-            Sitemap
+  #content
+    = yield
+  #right-side-bar
+    
+  #footer
+    .legalese
+      Copyright &copy; 2010. All Rights Reserved. Book hunt.
+    %ul
+      %li
+        %a{:href=>"#"}
+          Privacy Policy
+      %li
+        %a{:href=>"#"}
+          About Us
+      %li
+        %a{:href=>"#"}
+          Contact Us
+      %li
+        %a{:href=>"#"}
+          FAQ
+      %li
+        %a{:href=>"#"}
+          Sitemap
 
