<cj> Adding a two-column Layout. Still need to pull out common stuff.

--- a/public/stylesheets/sass/config.scss
+++ b/public/stylesheets/sass/config.scss
@@ -3,6 +3,7 @@ $background-color: #343434;
 $yellow-color: #FFC200;
 $orange-color: #FF5B00;
 $maroon-color: #B80028;
+$light-gray-color: #e4e4e4;
 //$header-footer-color: #6b6464;
 //$background-color: #6b6464;
 //$header-footer-color: #7e7a7a;
