--- a/app/views/layouts/two_column.html.haml
+++ b/app/views/layouts/two_column.html.haml
@@ -9,7 +9,7 @@
 %script{:src=>'/javascripts/jquery.autocomplete.min.js', :type=>"text/javascript"}
 %script{:src=>'/javascripts/jquery-ui.js', :type=>"text/javascript"}
 
-%link{:href=>'/stylesheets/layout.css', :media=>'screen, projection' , :rel=>"stylesheet", :type=>"text/css"}
+%link{:href=>'/stylesheets/two-column-layout.css', :media=>'screen, projection' , :rel=>"stylesheet", :type=>"text/css"}
 %link{:href=>'/stylesheets/jquery.autocomplete.css', :media=>'screen, projection' , :rel=>"stylesheet", :type=>"text/css"}
 %link{:href=>'http://fonts.googleapis.com/css?family=Reenie+Beanie', :media=>'screen, projection' , :rel=>"stylesheet", :type=>"text/css"}
 %body
