--- a/public/stylesheets/sass/jquery.autocomplete.scss
+++ b/public/stylesheets/sass/jquery.autocomplete.scss
@@ -1,31 +1,48 @@
-$header-footer-color: #343434;
-$background-color: #343434;
-$yellow-color: #FFC200;
-$orange-color: #FF5B00;
-$maroon-color: #B80028;
-//$header-footer-color: #6b6464;
-//$background-color: #6b6464;
-//$header-footer-color: #7e7a7a;
-//$background-color: #7e7a7a;
-
-//$header-color: black
-
-@mixin Reenie_Beanie_font{
-  font-family: 'Reenie Beanie', serif;
-  font-size: 28px;
-  font-style: normal;
-  font-weight: 400;
-  text-shadow: none;
-  text-decoration: none;
-  text-transform: none;
-  letter-spacing: 0em;
-  word-spacing: 0em;
-  line-height: 1em;
-  text-align: center;
+.ac_results {
+	padding: 0px;
+	border: 1px solid black;
+	background-color: white;
+	overflow: hidden;
+	z-index: 99999;
 }
 
-@mixin site_wide_font{
-  font-family: 'Soho', serif;
-  font-size: 14px;
-  color: $header-footer-color
+.ac_results ul {
+	width: 100%;
+	list-style-position: outside;
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
+.ac_results li {
+	margin: 0px;
+	padding: 2px 5px;
+	cursor: default;
+	display: block;
+	/*
+	if width will be 100% horizontal scrollbar will apear
+	when scroll mode will be used
+	*/
+	/*width: 100%;*/
+	font: menu;
+	font-size: 12px;
+	/*
+	it is very important, if line-height not setted or setted
+	in relative units scroll will be broken in firefox
+	*/
+	line-height: 16px;
+	overflow: hidden;
+}
+
+.ac_loading {
+	background: white url('indicator.gif') right center no-repeat;
+}
+
+.ac_odd {
+	background-color: #eee;
+}
+
+.ac_over {
+	background-color: #0A246A;
+	color: white;
 }
