--- a/public/stylesheets/sass/footer.scss
+++ b/public/stylesheets/sass/footer.scss
@@ -1,7 +1,7 @@
 @import "config.scss";
 
 #footer {
-  overflow: auto;
+  clear: both;
   background-color: $header-footer-color;
   color: white;
   div{
