--- a/public/stylesheets/sass/two-column-layout.scss
+++ b/public/stylesheets/sass/two-column-layout.scss
@@ -5,7 +5,7 @@
 
 
 #container {
-  background-color: white;
+  background-color: $background-color;
   width: 85%;
   margin: auto;
   z-index: 1;
@@ -63,9 +63,11 @@
 
 
 #content {
-  height: 20em;
+  float: left;
+  height: 60em;
   overflow: auto;
-  background-color: $light-gray-color;
+//  background-color: $light-gray-color;
+  background-color: white;
   width: 80%;
   .seach_container{
     
@@ -73,9 +75,12 @@
 }
 
 #right-side-bar {
-  height: 20em;
+  float: right;
+//  background-color: $light-gray-color;
+  background-color: white;
+  height: 60em;
   display: inline;
-  width: 20%;
+  width: 19%;
 }
 
 
