<cj> Some more styling with post a book page and adding category migration.

--- a/app/views/books/_book_form.html.haml
+++ b/app/views/books/_book_form.html.haml
@@ -6,7 +6,7 @@
       = f.text_field 'name', :maxlength => 40 , :size=> 20
   .form_row
     .form_label
-      = f.label :author,"Author"
+      = f.label :author,"Author(s)"
     .form_field
       = f.text_field 'author', :maxlength => 40, :size => 20
   .form_row
