--- a/public/stylesheets/sass/post_a_book.scss
+++ b/public/stylesheets/sass/post_a_book.scss
@@ -1,10 +1,9 @@
 @import "config.scss";
 
-
 .header{
   background-color: $yellow-color;
   @include Reenie_Beanie_font;
-  padding: 5px;
+  padding: 1px;
 }
 
 #container{
@@ -33,16 +32,50 @@
     }
 
   }
-  .posted_books table{
+  .posted_books{
     margin: 20px 0 0 0;
-    thead tr th{
-      width: 10%;
-      text-align: left;
-    }
-    tbody tr th{
-      width: 10%;
+    .book{
+      clear: both;
+      margin: 10px;
+      height: 90px;
+      background-color: $lighter-gray-color;
+      .row{
+        clear: both;
+        .label{
+          font-weight: bold;
+          float: left;
+        }
+        .value{
+          float: left;
+        }
+      }
+      .thumbnail{
+        background: url("/images/book_thumbnail_80_by_80.png") no-repeat;
+        float: left;
+        width: 80px;
+        height: 80px;
+        margin: 5px 40px 5px 20px;
+      }
+      .content-middle{
+        float: left;
+        width: 50%;
+        margin-top: 5px;
+        .title{
+          font-size: 1.2em;
+          font-weight: bold;
+          .label{
+            margin-bottom: 10px;
+          }
+          .value{
+            margin-bottom: 10px;
+          }
+        }
+
+      }
+      .content-right{
+        margin: 5px 20px 0 0;
+        float: right;
+      }
     }
   }
-
-
 }
